# VINS-Fusion_Learn

./: .gitignore  note.cpp
camera_models/: CMakeLists-sdk.txt  CMakeLists.txt
config/: test.rviz  vins_rviz_config.rviz
config/euroc/: euroc_mono_imu_config.yaml
config/mynteye/: mynteye_mono_imu_config.yaml
config/mynteye-s/: left_equ.yaml  mynt_mono_config.yaml  mynt_stereo_imu_config.yaml  mynteye_mono_imu_config.yaml  right_equ.yaml
config/vi_car/: vi_car.yaml
docker/: Dockerfile
vins_estimator/: CMakeLists--sdk.txt  CMakeLists.txt  CMakeLists_debug.txt
vins_estimator/launch/: euroc_mono_imu.launch  kitti_stereo_gps.launch  mynteye-s-mono-imu.launch  mynteye-s-stereo-imu.launch  vins_rviz.launch
vins_estimator/launch/bk/: car.launch  kitti_stereo.launch  kitti_stereo_gps.launch  mono_imu.launch  stereo.launch  stereo_imu.launch
vins_estimator/src/: main.cpp  main_ori.cpp  mytest.cpp  rosNodeTest.cpp
vins_estimator/src/driver/: CMakeLists.txt  CMakeLists_bk.txt  adapter.cpp  adapter.h  cv_painter.h  driver.cpp  driver.h  macro.h  mglog.h  mynt_S1030.cpp  mynt_S1030.h  mynt_S1030_ros.cpp  mynt_S1030_ros.h  simulator.cpp  simulator.h  struct.h
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp
vins_estimator/src/utility/: simulator.cpp  simulator.h  utility.cpp  utility.h  visual_base.h  visual_ros.cpp  visual_ros.h  visual_sdk.cpp  visual_sdk.h  visualization.cpp  visualization.h
